Archive/22.0.1/Solution Exports/OpenShift/roundcube-mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubemail
  labels:
    service: roundcubemail
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubemail
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubemail
    spec:
      containers:
      - name: roundcubemail
        image: roundcube/roundcubemail:1.6.0-fpm-alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /var/www/html
          name: www-data
        - mountPath: /tmp/roundcube-temp
          name: temp-data
      restartPolicy: Always
      # serviceAccountName: ""
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: roundcubemail-www-pvc
      - name: temp-data
        persistentVolumeClaim:
          claimName: roundcubemail-temp-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: roundcubemail
  labels:
    service: roundcubemail
spec:
  type: NodePort
  ports:
  - port: 9000
    protocol: TCP
  selector:
    service: roundcubemail
