Archive/22.0.1/Solution Exports/OpenShift/roundcube-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubedb
  labels:
    service: roundcubedb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubedb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubedb
    spec:
      containers:
      - name: roundcubedb
        image: postgres:alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: roundcubedb-volume
      restartPolicy: Always
      serviceAccountName: "default"
      volumes:
      - name: roundcubedb-volume
        persistentVolumeClaim:
          claimName: roundcubedb-volumeclaim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubemail
  labels:
    service: roundcubemail
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubemail
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubemail
    spec:
      containers:
      - name: roundcubemail
        image: roundcube/roundcubemail:1.6.0-fpm-alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /var/www/html
          name: www-data
        - mountPath: /tmp/roundcube-temp
          name: temp-data
      restartPolicy: Always
      # serviceAccountName: ""
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: roundcubemail-www-pvc
      - name: temp-data
        persistentVolumeClaim:
          claimName: roundcubemail-temp-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubenginx
  labels:
    service: roundcubenginx
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubenginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubenginx
    spec:
      containers:
      - name: roundcubenginx
        image: nginx:alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www-data
          mountPath: /var/www/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      restartPolicy: Always
      serviceAccountName: "default"
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: roundcubemail-www-pvc
      - name: nginx-config
        configMap:
          name: roundcubenginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: roundcubedb
  labels:
    service: roundcubedb
spec:
  type: NodePort
  ports:
  - port: 5432
    protocol: TCP
  selector:
    service: roundcubedb
---
apiVersion: v1
kind: Service
metadata:
  name: roundcubemail
  labels:
    service: roundcubemail
spec:
  type: NodePort
  ports:
  - port: 9000
    protocol: TCP
  selector:
    service: roundcubemail
---
apiVersion: v1
kind: Service
metadata:
  name: roundcubenginx
  labels:
    service: roundcubenginx
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    service: roundcubenginx

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: roundcubenginx
  name: roundcubenginx
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: roundcubenginx
    weight: 100
  wildcardPolicy: None
